added experiment setup

--- a/experiment.html
+++ b/experiment.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My experiment</title>
+    <meta charset="UTF-8">
+    <title>Word Arrangement Task</title>
+    <link rel="stylesheet" href="jspsych/css/jspsych.css" />
     <script src="jspsych/jspsych.js"></script>
-    <script src="jspsych/plugin-html-keyboard-response.js"></script>
-    <link href="jspsych/jspsych.css" rel="stylesheet" type="text/css" />
+    <script src="jspsych/plugins/jspsych-html-keyboard-response.js"></script>
+    <script src="experiment.js"></script>
   </head>
   <body></body>
-  <script>
-    const jsPsych = initJsPsych();
-
-    const hello_trial = {
-      type: jsPsychHtmlKeyboardResponse,
-      stimulus: 'Hello world!'
-    }
-
-    jsPsych.run([hello_trial]);
-  </script>
 </html>
