--- a/experiment.html
+++ b/experiment.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="jspsych/css/jspsych.css" />
     <script src="jspsych/jspsych.js"></script>
     <script src="jspsych/plugins/jspsych-html-keyboard-response.js"></script>
+    <script src="jspsych/plugins/jspsych-html-button-response.js"></script>
     <script src="experiment.js"></script>
   </head>
   <body></body>
