updated study code

--- a/experiment.html
+++ b/experiment.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Word Arrangement Task</title>
-    <link rel="stylesheet" href="jspsych/css/jspsych.css" />
-    <script src="jspsych/jspsych.js"></script>
-    <script src="jspsych/plugins/jspsych-html-keyboard-response.js"></script>
-    <script src="jspsych/plugins/jspsych-html-button-response.js"></script>
-    <script src="experiment.js"></script>
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8">
+  <title>Word Circle Task</title>
+  <script src="jspsych/jspsych.js"></script>
+  <script src="jspsych/plugin-html-button-response.js"></script>
+  <script src="jspsych/plugin-html-keyboard-response.js"></script>
+  <script src="experiment.js"></script>
+  <link rel="stylesheet" href="experiment.css">
+</head>
+<body>
+</body>
 </html>
