--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!-- Load jsPsych plugins -->
   <script src="jspsych/plugin-html-button-response.js"></script>
   <script src="jspsych/plugin-html-keyboard-response.js"></script>
+  <script src="jspsych/plugin-fullscreen.js"></script>
+
   <!-- call-function plugin (used for diagnostics / small callbacks) -->
   <script src="jspsych/plugin-call-function.js"></script>
   <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe"></script>
