--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
   <script src="jspsych/plugin-html-button-response.js"></script>
   <script src="jspsych/plugin-html-keyboard-response.js"></script>
   <script src="jspsych/plugin-fullscreen.js"></script>
+  <script src="jspsych/plugin-survey-html-form.js"></script>
+
 
   <!-- call-function plugin (used for diagnostics / small callbacks) -->
   <script src="jspsych/plugin-call-function.js"></script>
   <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe"></script>
+  
   
   <!-- Load experiment last -->
   <script defer src="experiment.js"></script>
