--- a/index.html
+++ b/index.html
@@ -3,44 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Word Circle Task</title>
-  <!-- Load stylesheets first -->
   <link rel="stylesheet" href="jspsych/jspsych.css">
   <link rel="stylesheet" href="experiment.css">
   
-  <!-- Load jsPsych core -->
   <script src="jspsych/jspsych.js"></script>
   
-  <!-- Load jsPsych plugins -->
   <script src="jspsych/plugin-html-button-response.js"></script>
   <script src="jspsych/plugin-html-keyboard-response.js"></script>
   <script src="jspsych/plugin-fullscreen.js"></script>
-  <script src="jspsych/plugin-survey-html-form.js"></script>
-
-
-  <!-- call-function plugin (used for diagnostics / small callbacks) -->
-  <script src="jspsych/plugin-call-function.js"></script>
+  <script src="jspsych/plugin-survey-html-form.js"></script> <script src="jspsych/plugin-call-function.js"></script>
   <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe"></script>
   
   
-  <!-- Load experiment last -->
   <script defer src="experiment.js"></script>
   <script>
     // ========================================
     // DATA CONVERSION FUNCTIONS FOR ISC ANALYSIS
     // ========================================
     
-    /**
-     * Convert word positions to distance matrix
-     * @param {Array} positions - Array of {word: string, x: number, y: number}
-     * @returns {Array} n x n distance matrix
-     */
-
-     /**
- * Add this code to your existing experiment to calculate and save ISC data
- * 
- * Call processPlacementsForISC(placements) with your placements array
- * to get back an object that includes the matrix and vector
- */
+    // ... (All the original ISC functions remain here) ...
 
 /**
  * Process placements data to add distance matrix and dissimilarity vector
@@ -180,25 +161,21 @@ function processPlacementsAngular(placements) {
 
 /**
  * MAIN FUNCTION: Add this to your save data function
- * 
- * Example usage in your code:
- * 
- * // Your existing data
+ * * Example usage in your code:
+ * * // Your existing data
  * const experimentData = {
- *   participant_id: "sub001",
- *   timestamp: new Date().toISOString(),
- *   placements: [
- *     {word: "电视", x: 265, y: 127, cx: 290, cy: 144, ...},
- *     {word: "桌子", x: 196, y: 315, cx: 221, cy: 332, ...},
- *     // ... all 63 words
- *   ]
+ * participant_id: "sub001",
+ * timestamp: new Date().toISOString(),
+ * placements: [
+ * {word: "电视", x: 265, y: 127, cx: 290, cy: 144, ...},
+ * {word: "桌子", x: 196, y: 315, cx: 221, cy: 332, ...},
+ * // ... all 63 words
+ * ]
  * };
- * 
- * // Add ISC data
+ * * // Add ISC data
  * const iscData = processPlacementsForISC(experimentData.placements);
  * const finalData = Object.assign({}, experimentData, iscData);
- * 
- * // Now save finalData - it will include the matrix and vector!
+ * * // Now save finalData - it will include the matrix and vector!
  */
 
 // Example of how to integrate with your existing save function
